# python-project-lvl1

./: .makefile.swp  README.md  pyproject.toml
.github/workflows/: .superlinter.yml.swp  superlinter.yml
brain_games/: cli.py  game_flow.py
brain_games/game_engine/: game_flow.py  gcd.py  is_prime.py
brain_games/games/: calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: .brain_games.py.swp  brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_games.py.save  brain_gcd.py  brain_prime.py  brain_progression.py  game_flow.py  is_prime.py
roddy_g_brain_games.egg-info/: PKG-INFO  SOURCES.txt
