[tool.poetry]
name = "roddy-g_brain_games"
version = "0.5.0"
description = "hexlet project"
authors = ["Roddy <per677199@yandex.ru>"]
repository = "https://github.com/roddy-g/python-project-lvl1"

packages = [
  { include = "brain_games" },
]

classifiers = [
    "Programming Language :: Python :: 3.8"
]



[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:play_game"
brain-calc = "brain_games.scripts.brain_calc:play_game"
brain-gcd = "brain_games.scripts.brain_gcd:play_game"
brain-progression = "brain_games.scripts.brain_progression:play_game"
brain-prime = "brain_games.scripts.brain_prime:play_game"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


