[tool.poetry]
name = "roddy-g_brain_games"
version = "0.6.0"
description = "hexlet project"
authors = ["Roddy <per677199@yandex.ru>"]
repository = "https://github.com/roddy-g/python-project-lvl1"

packages = [
  { include = "brain_games" },
]

classifiers = [
    "Programming Language :: Python :: 3.8"
]



[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:launch_game"
brain-calc = "brain_games.scripts.brain_calc:launch_game"
brain-gcd = "brain_games.scripts.brain_gcd:launch_game"
brain-progression = "brain_games.scripts.brain_progression:launch_game"
brain-prime = "brain_games.scripts.brain_prime:launch_game"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


